minor visual tweaks for iPhone

--- a/DailyReports/app/DailyReport/list.html
+++ b/DailyReports/app/DailyReport/list.html
@@ -46,7 +46,7 @@
                 <div class="col-xs-4">9/07/2013</div>
                 <div class="col-xs-2 text-right"><span class="fred">18</span></div>
                 <div class="col-xs-1">
-                    <i class="icon-ok icon-2x" ></i>
+                    <i class="icon-ok" ></i>
                 </div>
                 <div class="col-xs-1 text-right">
                     <i class="icon-angle-right icon-2x lightGray"></i>
@@ -55,11 +55,11 @@
         </a>
         <a class="list-group-item" ng-click="goToTues();">
             <div class="row">
-                <div class="col-xs-4">Tuesday</div>
+                <div class="col-xs-4">Tuesday&nbsp;<i class="icon-refresh" style="color: darkgrey;"></i></div>
                 <div class="col-xs-4">9/06/2013</div>
-                <div class="col-xs-2 "><i class="icon-refresh" style="color: darkgrey;"></i><span class="fred">44</span></div>
+                <div class="col-xs-2 "><span class="fred">44</span></div>
                 <div class="col-xs-1">
-                    <i class="icon-ok icon-2x" ></i>
+                    <i class="icon-ok" ></i>
                 </div>
                 <div class="col-xs-1 text-right">
                     <i class="icon-angle-right icon-2x lightGray"></i>
@@ -72,7 +72,7 @@
                 <div class="col-xs-4">9/05/2013</div>
                 <div class="col-xs-2 text-right"><span class="fred">12</span></div>
                 <div class="col-xs-1">
-                	<i class="icon-ok icon-2x"></i>
+                	<i class="icon-ok"></i>
                 </div>
                 <div class="col-xs-1 text-right">
                     <i class="icon-angle-right icon-2x lightGray"></i>
@@ -86,7 +86,7 @@
                 <div class="col-xs-4">9/04/2013</div>
                 <div class="col-xs-2 text-right"></div>
                 <div class="col-xs-1">
-                	<i class="icon-ok icon-2x" ></i>
+                	<i class="icon-ok" ></i>
                 </div>
                 <div class="col-xs-1 text-right">
                     <i class="icon-angle-right icon-2x lightGray"></i>
@@ -99,7 +99,7 @@
                 <div class="col-xs-4">9/03/2013</div>
                 <div class="col-xs-2 text-right"></div>
                 <div class="col-xs-1">
-                	<i class="icon-ok icon-2x" ></i>
+                	<i class="icon-ok" ></i>
                 </div>
                 <div class="col-xs-1 text-right">
                     <i class="icon-angle-right icon-2x lightGray"></i>
@@ -112,7 +112,7 @@
                 <div class="col-xs-4">9/02/2013</div>
                 <div class="col-xs-2 text-right"><span class="fred">18</span></div>
                 <div class="col-xs-1">
-                	<i class="icon-ok icon-2x" ></i>
+                	<i class="icon-ok" ></i>
                 </div>
                 <div class="col-xs-1 text-right">
                     <i class="icon-angle-right icon-2x lightGray"></i>
