--- a/DailyReports/app/DailyReport/Manpower/detail.html
+++ b/DailyReports/app/DailyReport/Manpower/detail.html
@@ -9,6 +9,12 @@
         </div>
     </div>
 </div>
+<div style="position:static; height:40px">
+    <div style="position:absolute; right:10px; font-size: 20px;">
+                 <span class="icon-circle-blank text-primary" ng-show="!isWarning" ng-click="isWarning = !isWarning;"> &nbsp;Risk</span>
+                <span class="icon-warning-sign text-warning" ng-click="isWarning = !isWarning;" ng-show="isWarning"><span class="text-danger">&nbsp;Risk</span></span>
+    </div>
+</div>
 <div class="container" >
     <div class="list-group">
         <a class="list-group-item" ng-click="" >
