--- a/DailyReports/app/DailyReport/detail.html
+++ b/DailyReports/app/DailyReport/detail.html
@@ -66,10 +66,10 @@
     <a class="list-group-item" ng-click="goToPhotoList();" >
         <div class="row bigrow">
             <div class="col-xs-6">
-                <i class="icon-camera"></i> Photo
+                <i class="icon-camera"></i> Photo&nbsp; <i class="icon-refresh" style="color: darkgrey;"></i>
             </div>
             <div class="col-xs-1">
-                <i class="icon-refresh" style="color: darkgrey;"></i>
+               
             </div>
             <div class="col-xs-1"><span class="fred">39</span></div>
             <div class="col-xs-1">
